--- a/README.adoc
+++ b/README.adoc
@@ -5,10 +5,13 @@
 === Introduction
 
 . What's your name?
-. Why did you pick computer science or networking?
+. Why did you pick your major?
 . Tell us something nobody else knows about you.
 
 === https://raw.githubusercontent.com/lawrancej/COMP278-2014/master/COMP278SyllabusLawrance.docx[Syllabus (Word document)]
+
+* The textbook is recommended, but not required. https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md[Here's some free textbooks instead.]
+* As long as we're here, https://github.com/sindresorhus/awesome[check out some awesome stuff].
 
 === Install Git and frontends
 [[install-git]]
