--- a/README.adoc
+++ b/README.adoc
@@ -9,11 +9,11 @@
 
 * Lecture 10: Sequential logic, finite state machines
 * Lecture 9: Latches, flip-flops, registers
-* Lab 5: Midterm
+* Lab 5: Midterm!
 
 == Week 4
 
-* http://lawrancej.github.io/COMP278-2014/exams/practice-midterm1.pdf[Lecture 8: Practice midterm II]
+* http://lawrancej.github.io/COMP278-2014/exams/practice-midterm2.pdf[Lecture 8: Practice midterm II]
 * http://lawrancej.github.io/COMP278-2014/exams/practice-midterm1.pdf[Lecture 7: Practice midterm I]
 * https://github.com/lawrancej/COMP278-2014/blob/master/lab-instructions/lab4.adoc[Lab 4: Boolean algebra, Karnaugh maps, multiplexers]
 
