--- a/lab-instructions/lab6.adoc
+++ b/lab-instructions/lab6.adoc
@@ -25,3 +25,11 @@ image:http://lawrancej.github.io/COMP278-2014/lab-instructions/lab5vending.svg[V
 . Write out a state-transition table.
 . Convert the state-transition table into the appropriate logic expressions.
 . Finally, using either the appropriate gates, or the equivalent MUX configurations, implement this vending machine as a circuit in Logisim.
+
+When you are done, save your work and do the following:
+
+----
+git add lab6solution.*           # Stage your changes to the next commit
+git commit -am "Lab 6 complete." # Record your changes locally
+git push origin master           # Push your work
+----
