--- a/lab-instructions/lab7.adoc
+++ b/lab-instructions/lab7.adoc
@@ -16,7 +16,9 @@ Use the https://github.com/lawrancej/COMP278-2014/blob/master/circuits/cpu-16bit
 1. Write out source code for a function that computes the sum of an array of integers. 
 (Yes, I know practically every language has a sum(array) function, I want you to write your own version).
 Write it with the assumption that the length is given separately from the array: `int sum(int length, int[] array);`
-2. Write out equivalent assembly code for source code. One stipulation: the array should be loaded from RAM, and the size of the array should be read first.
+2. Write out equivalent assembly code for source code.
+One stipulation: the array should be loaded from RAM, and the size of the array should be read first.
+Hint: use the LOAD Ra instruction (opcode d in hex).
 3. Write out equivalent machine code, and test it in Logisim, using the supplied CPU in `circuits/cpu-16bit.circ`. Save the contents of RAM as lab7sum.txt.
 
 When you are done, save your work and do the following:
