--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,19 @@
 
 In this course, we learn http://www.simplecpu.com/Binary.html[how computers work] at a low level.
 
+== Week 9
+
+* Lecture 17: http://xiph.org/video/vid1.shtml[Digital media primer]
+* Lab 8: Speed dating
+
 == Week 8
 
-* Lecture 15: http://blog.codinghorror.com/the-infinite-space-between-words/[Memory Organization], http://www.engineerguy.com/videos/video-harddrive.htm[Hard drives], http://www.engineerguy.com/videos/video-lcd.htm[Displays], http://www.engineerguy.com/videos/video-transistor-point-contact.htm[Transistor]
+* Lab 8: Speed dating
+* Lecture 16: Lab 6 and 7 hints
+* Lecture 15: http://blog.codinghorror.com/the-infinite-space-between-words/[Memory Organization],
+http://www.engineerguy.com/videos/video-harddrive.htm[Hard drives],
+http://www.engineerguy.com/videos/video-lcd.htm[Displays],
+http://www.engineerguy.com/videos/video-transistor-point-contact.htm[Transistor]
 * https://github.com/lawrancej/COMP278-2014/blob/master/lab-instructions/lab7.adoc[Lab 7: Assembly/machine programming]
 
 == Week 7
