--- a/lab-instructions/lab7.adoc
+++ b/lab-instructions/lab7.adoc
@@ -11,7 +11,8 @@ Use the https://github.com/lawrancej/COMP278-2014/blob/master/circuits/cpu-16bit
 2. Write out equivalent assembly code for source code.
 One stipulation: the two numbers should be loaded from RAM.
 Hint: the STOR instruction doesn't work. Store the result into a register. To move data from Rs to Rd, ADD Rd, Rs, R0 (R0 is constant 0).
-3. Write out equivalent machine code, and test it in Logisim, using the supplied CPU in `circuits/cpu-16bit.circ`. Save the contents of RAM as lab7max.txt.
+3. Write out equivalent machine code, and test it in Logisim, using the supplied CPU in `circuits/cpu-16bit.circ`. 
+4. Save the contents of RAM as lab7max.txt.
 
 == Sum
 
@@ -21,7 +22,8 @@ Write it with the assumption that the length is given separately from the array:
 2. Write out equivalent assembly code for source code.
 One stipulation: the array should be loaded from RAM, and the size of the array should be read first.
 Hint: use the LOAD Ra instruction (opcode d in hex).
-3. Write out equivalent machine code, and test it in Logisim, using the supplied CPU in `circuits/cpu-16bit.circ`. Save the contents of RAM as lab7sum.txt.
+3. Write out equivalent machine code, and test it in Logisim, using the supplied CPU in `circuits/cpu-16bit.circ`.
+4. Save the contents of RAM as lab7sum.txt.
 
 When you are done, save your work and do the following:
 
